0032145: Coding Rules - move GL functions loading to OpenGl_GlFunctions.cxx